完成 註冊畫面

--- a/momobackend/public/style.css
+++ b/momobackend/public/style.css
@@ -42,6 +42,13 @@ a, li, p, h1 {
   margin-bottom: 1em;
   background-color: rgb(99, 98, 189);
 }
+.article .article_title .validate {
+  padding-top: 1em;
+  padding-right: 2em;
+  padding-bottom: 1em;
+  padding-left: 2em;
+  width: 50%;
+}
 .article .article_content {
   padding-right: 2em;
   background-color: rgb(99, 98, 189);
