--- a/momobackend/public/style.css
+++ b/momobackend/public/style.css
@@ -42,6 +42,13 @@ a, li, p, h1 {
   margin-bottom: 1em;
   background-color: rgb(99, 98, 189);
 }
+.article .article_title .add_article {
+  padding-top: 1em;
+  padding-right: 2em;
+  padding-bottom: 1em;
+  padding-left: 2em;
+  width: 75%;
+}
 .article .article_title .validate {
   padding-top: 1em;
   padding-right: 2em;
@@ -60,6 +67,10 @@ a, li, p, h1 {
 .article .article_authorandtime {
   background-color: rgb(221, 195, 45);
   padding-left: 2em;
+}
+
+.fa-plus-square:before {
+  color:rgb(60, 141, 58);
 }
 
 #sidebar {
