調整 新增文章按鈕

--- a/momoblog/public/style.css
+++ b/momoblog/public/style.css
@@ -18,7 +18,7 @@ a, li, p, h1 {
 }
 
 h1 {
-  padding-bottom: 0.1em;
+  padding-bottom: 0.3em;
 }
 
 .title {
@@ -31,7 +31,12 @@ h1 {
   color: black;
 }
 
-
+.new_button{
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  padding-left: 2em;
+  background-color: salmon;
+}
 
 .article {
   padding-top: 1em;
