--- a/momoblog/public/style.css
+++ b/momoblog/public/style.css
@@ -87,6 +87,13 @@ h1 {
   padding-left: 2em;
 }
 
+.button {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
 .noblue {
   color:black;
 }
